force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__AggregrationType__c.field-meta.xml
<CustomField>
    <fullName>ssot__AggregrationType__c</fullName>
    <label>Aggregation Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AggregrationType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>