force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__EmploymentPercentage__c.field-meta.xml
<CustomField>
    <fullName>ssot__EmploymentPercentage__c</fullName>
    <label>Employment Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EmploymentPercentage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>