force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>ssot__Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Ethnicity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>