force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__EthnicityPercentage__c.field-meta.xml
<CustomField>
    <fullName>ssot__EthnicityPercentage__c</fullName>
    <label>Ethnicity Percentage</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EthnicityPercentage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>