force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__MedianIndividualIncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MedianIndividualIncomeAmount__c</fullName>
    <label>Median Individual Income</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MedianIndividualIncomeAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>