force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__PopulationCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__PopulationCount__c</fullName>
    <label>Population Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PopulationCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>