force-app/main/default/objects/ssot__GeoDemographicDistribution__dlm/fields/ssot__ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__ZipCode__c</fullName>
    <label>Zip Code</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ZipCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>